--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-title = "Notre-Dame de Paris"
-baseURL = "https://example.com"
+title = "NixVir"
+baseURL = "/"
 languageCode = "en-us"
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 theme = "gohugo-theme-ananke"
 
 MetaDataFormat = "yaml"
@@ -16,10 +17,11 @@ enableRobotsTXT = true
   filename = "sitemap.xml"
 
 [params]
+  logo = "/images/nixvirlogo.png"
   favicon = ""
-  description = "The last theme you'll ever need. Maybe."
+  description = "NixVir"
   facebook = ""
-  twitter = "https://twitter.com/GoHugoIO"
+  twitter = ""
   instagram = ""
   youtube = ""
   github = ""
@@ -28,5 +30,5 @@ enableRobotsTXT = true
   mastodon = ""
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
-  featured_image = "/images/gohugo-default-sample-hero-image.jpg"
+  featured_image = "/images/mtnsky.jpg"
   recent_posts_number = 2
