Add cache control headers for HTML pages to prevent caching issues
This ensures the homepage and other HTML pages are not cached by browsers or CDNs, which was preventing the new blog post from appearing on the homepage.

--- a/netlify.toml
+++ b/netlify.toml
@@ -20,6 +20,17 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "geolocation=(), microphone=(), camera=()"
 
+# Prevent HTML caching
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
 [[headers]]
   for = "/*.css"
   [headers.values]
