--- a/netlify.toml
+++ b/netlify.toml
@@ -22,7 +22,7 @@
     # HSTS - enforce HTTPS for 1 year
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
     # Content Security Policy - restrict script/style sources
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' cdn.jsdelivr.net www.googletagmanager.com www.google-analytics.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' www.google-analytics.com formspree.io; font-src 'self'; frame-ancestors 'none'"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' cdn.jsdelivr.net www.googletagmanager.com www.google-analytics.com; style-src 'self' 'unsafe-inline' fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.google-analytics.com formspree.io cdn.jsdelivr.net raw.githubusercontent.com; font-src 'self' fonts.gstatic.com; frame-ancestors 'none'"
 
 # Prevent HTML caching
 [[headers]]
