Revert "Improve SEO and content structure"
This reverts commit 2df44ebbbe8e4d832865b6c674e6c9624c49666d.

--- a/config.toml
+++ b/config.toml
@@ -59,9 +59,6 @@ enableRobotsTXT = true
   [minify.tdewolff.html]
     keepWhitespace = false
   [minify.tdewolff.css]
-    version = 3
+    keepCSS2 = false
   [minify.tdewolff.js]
     keepVarNames = false
-
-# Security: Disable Hugo version disclosure
-disableHugoGeneratorInject = true
